tests/ui/fail/unit-struct.rs
use variant_partial_eq::VariantPartialEq;

#[derive(VariantPartialEq)]
struct Unit;

fn main() {}