tests/ui/fail/unit-struct.stderr
error: #[derive(VariantPartialEq)] only supports structs with names fields
 --> tests/ui/fail/unit-struct.rs:3:10
  |
3 | #[derive(VariantPartialEq)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `VariantPartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)
